added mailto to contact

--- a/css/components/_btn.scss
+++ b/css/components/_btn.scss
@@ -6,6 +6,7 @@
     font-weight:400;
     -webkit-box-shadow: 2px 5px 16px 0px #d0d0d0, inset 5px 5px 15px 5px rgba(0,0,0,0); 
     box-shadow: 2px 5px 16px 0px #d0d0d0, inset 5px 5px 15px 5px rgba(0,0,0,0);
+    display:inline-block;
 
     &:hover {
         background: rgb(180,96,219);
@@ -18,6 +19,11 @@
     &:focus {
         background: rgb(180,96,219);
         background: linear-gradient(10deg, rgba(180,96,219,1) 0%, rgba(180,96,219,1) 75%, rgba(235,114,218,1) 100%);
+    }
+
+    &--large {
+        padding:15px 50px;
+        margin:15px auto 30px auto;
     }
 }
 
